--- a/Render/Makefile
+++ b/Render/Makefile
@@ -3,13 +3,14 @@
 OPENGL_FLAGS =  -framework Cocoa -framework OpenGL -framework IOKit
 GLFW_flags = -lglfw3
 CFLAGS = -std=c++17 -fdiagnostics-color=always -Wall -Wdeprecated-declarations #-Wno-deprecated
+GLM_FLAGS = -I/opt/homebrew/Cellar/glm/0.9.9.8/include 
 
 ## Compile and link any .cpp program mentioned in "make *.cpp"
 
 all: $(patsubst %.cpp, %, $(wildcard *.cpp))
 
 %: %.cpp 
-	clang++ $(GLFW_flags) $(OPENGL_FLAGS) $(CFLAGS) $^ -o $@ -v
+	clang++ $(GLFW_flags) $(OPENGL_FLAGS) $(CFLAGS) $(GLM_FLAGS) $^ -o $@ -v
 
 #for all *cpp files, clean their corresponding executables
 clean:
